[package]
name = "no0001_0050"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "no0005"
path = "src/no0005.rs"

[[bin]]
name = "no0044"
path = "src/no0044.rs"

[[bin]]
name = "no0045"
path = "src/no0045.rs"