[package]
name = "no0051_0100"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "no0064"
path = "src/no0064.rs"

[[bin]]
name = "no0079"
path = "src/no0079.rs"

[[bin]]
name = "no0083"
path = "src/no0083.rs"