[package]
name = "no0201_0250"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "no0201"
path = "src/no0201.rs"

[[bin]]
name = "no0203"
path = "src/no0203.rs"

[[bin]]
name = "no0207"
path = "src/no0207.rs"

[[bin]]
name = "no0208"
path = "src/no0208.rs"